Google Transit parsing

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Fri Apr 13 21:13:09 MSD 2012
+#Tue May 01 09:58:11 MSD 2012
 eclipse.preferences.version=1
 encoding//youth/itinerary.py=utf-8
+encoding//youth/maps.py=utf-8
+encoding//youth/stuff.py=utf-8
