--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Mon May 21 19:30:08 MSD 2012
+#Sun Jun 03 12:01:09 MSD 2012
 eclipse.preferences.version=1
+encoding//lib/translit.py=utf-8
 encoding//youth/bot.py=utf-8
 encoding//youth/controller.py=utf-8
 encoding//youth/itinerary.py=utf-8
