--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,8 @@ runtime: python27
 api_version: 1
 threadsafe: false
 
+default_expiration: "7d"
+
 handlers:
 - url: /styles
   static_dir: static/css
