--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,10 @@ threadsafe: false
 
 default_expiration: "7d"
 
+libraries:
+- name: django
+  version: "1.2"
+
 handlers:
 - url: /styles
   static_dir: static/css
